[gd_scene load_steps=34 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]
[ext_resource path="res://Animals/cute_penguin_closeup.png" type="Texture" id=2]
[ext_resource path="res://Inventory/MarketInventory.gd" type="Script" id=3]
[ext_resource path="res://Inventory/popsicle-blue.png" type="Texture" id=4]
[ext_resource path="res://Inventory/popsicle-red.png" type="Texture" id=5]
[ext_resource path="res://Inventory/icecream-sundae.png" type="Texture" id=6]
[ext_resource path="res://UI/coin_single.png" type="Texture" id=7]
[ext_resource path="res://UI/panel_Example4.png" type="Texture" id=8]
[ext_resource path="res://UI/IMG_3224.JPG" type="Texture" id=9]
[ext_resource path="res://Music and Sounds/KOTWB_BOSSANOVA_1.wav" type="AudioStream" id=10]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=11]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.415686, 0.211765, 0.541176, 0.611765 )
border_color = Color( 0.345098, 0.188235, 0.188235, 1 )
border_blend = true
shadow_color = Color( 0.2, 0.121569, 0.121569, 0.6 )

[sub_resource type="DynamicFont" id=12]
size = 14
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 11
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.392157, 0.219608, 0.219608, 0.301961 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.752941, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.368627, 0.282353, 0.588235, 0.603922 )

[sub_resource type="DynamicFont" id=14]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 13
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=16]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.392157, 0.219608, 0.219608, 0.301961 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.752941, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.368627, 0.282353, 0.588235, 0.603922 )

[sub_resource type="DynamicFont" id=17]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=18]
size = 13
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=19]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.392157, 0.219608, 0.219608, 0.301961 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.752941, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.368627, 0.282353, 0.588235, 0.603922 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=21]
size = 11
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=22]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.392157, 0.219608, 0.219608, 0.301961 )
border_color = Color( 0.752941, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.368627, 0.282353, 0.588235, 0.886275 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0862745, 0.0823529, 0.0823529, 0.87451 )

[node name="MarketInventory" type="Node2D"]
z_index = 3
z_as_relative = false
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 10.0
margin_right = 16.0
margin_bottom = 10.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite3" type="Sprite" parent="Control"]
position = Vector2( 283.333, 376.667 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 7 )

[node name="CoinTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 303.333
margin_top = 370.0
margin_right = 336.333
margin_bottom = 388.0
rect_scale = Vector2( 1.3, 1.3 )
text = "x 15"

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 170, 143.333 )
scale = Vector2( 1, 4.36667 )
texture = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 321.0
margin_bottom = 116.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_right = 680.0
margin_bottom = 612.0
rect_min_size = Vector2( 680, 433 )
custom_constants/separation = 13

[node name="Panel" type="Panel" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 6 )

[node name="CWPS" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Panel"]
margin_left = 207.0
margin_top = -12.0
margin_right = 377.0
margin_bottom = 21.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "CHILL WILLY'S"

[node name="CWPS3" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Panel"]
margin_left = 275.0
margin_top = 54.0
margin_right = 350.0
margin_bottom = 71.0
rect_scale = Vector2( 4.5, 2.8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "POP SHOP"

[node name="Sprite2" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Panel"]
position = Vector2( 93.3333, 6.66667 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="CWPS2" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Panel"]
margin_left = 100.0
margin_top = -20.0
margin_right = 133.0
margin_bottom = -3.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "<>"

[node name="Button" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 680.0
margin_bottom = 233.0
rect_min_size = Vector2( 0, 120 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 7 )
script = ExtResource( 1 )

[node name="RED POP" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button"]
anchor_left = 0.277
anchor_top = 0.291
anchor_right = 0.277
anchor_bottom = 0.372
margin_left = 11.64
margin_top = -34.92
margin_right = 96.64
margin_bottom = -17.64
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "RED POP"

[node name="Description" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button"]
anchor_left = 0.277
anchor_top = 0.291
anchor_right = 0.277
anchor_bottom = 0.372
margin_left = 11.64
margin_top = 44.08
margin_right = 114.64
margin_bottom = 58.36
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 15 )
text = "+2 Health"

[node name="Sprite" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Button"]
position = Vector2( 546.667, 60.3333 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer/Button"]
margin_left = 604.334
margin_top = 15.0
margin_right = 620.334
margin_bottom = 35.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "10"

[node name="Sprite2" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Button"]
position = Vector2( 86.6667, 60.3333 )
rotation = 0.785398
texture = ExtResource( 5 )

[node name="Button2" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 680.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 120 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 8 )

[node name="BLUE POP" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button2"]
margin_left = 200.0
margin_right = 280.0
margin_bottom = 23.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 17 )
text = "BLUE POP"

[node name="Description2" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button2"]
anchor_left = 0.277
anchor_top = 0.291
anchor_right = 0.277
anchor_bottom = 0.372
margin_left = 11.64
margin_top = 45.08
margin_right = 138.64
margin_bottom = 54.36
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 18 )
text = "+2 Energy"

[node name="Sprite2" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Button2"]
position = Vector2( 546.667, 63.3333 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="Control/CenterContainer/VBoxContainer/Button2"]
margin_left = 606.667
margin_top = 15.0
margin_right = 622.667
margin_bottom = 35.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "10"

[node name="Sprite" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Button2"]
position = Vector2( 86.6666, 60.6667 )
rotation = 0.785398
texture = ExtResource( 4 )

[node name="Button3" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 379.0
margin_right = 680.0
margin_bottom = 519.0
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 6 )

[node name="SUNDAE" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button3"]
margin_left = 200.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 23.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 20 )
text = "SUNDAE"

[node name="Description3" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button3"]
anchor_left = 0.277
anchor_top = 0.291
anchor_right = 0.277
anchor_bottom = 0.372
margin_left = 18.64
margin_top = 51.26
margin_right = 238.64
margin_bottom = 56.92
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Full Health / Energy"

[node name="Sprite3" type="Sprite" parent="Control/CenterContainer/VBoxContainer/Button3"]
position = Vector2( 546.667, 72 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="Label3" type="Label" parent="Control/CenterContainer/VBoxContainer/Button3"]
margin_left = 595.0
margin_top = 25.0
margin_right = 611.0
margin_bottom = 45.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
text = "15"

[node name="Button4" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 532.0
margin_right = 680.0
margin_bottom = 612.0
rect_min_size = Vector2( 550, 80 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/Button4"]
margin_left = 260.0
margin_top = 5.0
margin_right = 371.0
margin_bottom = 36.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 23 )
text = "RESUME"

[node name="Panel" type="Panel" parent="Control"]
margin_left = 106.0
margin_top = 218.0
margin_right = 232.0
margin_bottom = 248.0
rect_rotation = 350.0
custom_styles/panel = SubResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 133.333
margin_top = 220.0
margin_right = 220.333
margin_bottom = 260.0
rect_rotation = 350.0
rect_scale = Vector2( 1.3, 1.3 )
text = "Sold Out"

[node name="BGND" type="Sprite" parent="Control"]
position = Vector2( 133.333, 170 )
scale = Vector2( 0.55, 0.55 )
z_index = -1
texture = ExtResource( 9 )

[node name="BossaNova" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
